--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
         <dependency>
             <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
             <groupId>org.seleniumhq.selenium</groupId>
